5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4062/executions/1621_2930.log
== TEST (2019-04-01 18:06:32) 
-- CODE:
from math import*
g = float(input("valor de g: "))
t = float(input("tempo (seg): "))
l = (g * (t/2*pi) ** 2)
print(pi)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    t = float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:07:31) 
-- CODE:
from math import*
g = float(input("valor de g: "))
t = float(input("tempo (seg): "))
l = (g * (t/2*pi) ** 2)
print(l)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    t = float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:09:22) 
-- CODE:
from math import*
g = float(input("valor de g: "))
t = float(input("tempo (seg): "))
c = 2 * pi
l = ( g * ( t/c )  ** 2 )
print(c)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    t = float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:10:50) 
-- CODE:
from math import*
g = float(input("valor de g: "))
t = float(input("tempo (seg): "))
c = 2 * pi
l = ( t/c ) ** 2 
L = g * l
print(L)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    t = float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 18:11:14) 
-- CODE:
from math import*
g = float(input("valor de g: "))
t = float(input("tempo (seg): "))
c = 2 * pi
l = ( t/c ) ** 2 
L = g * l
print(L)

-- EXECUTION TIME:
0.121859
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1621/2930/main.py", line 3, in <module>
    t = float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 18:11:18) 
-- CODE:
from math import*
g = float(input("valor de g: "))
t = float(input("tempo (seg): "))
c = 2 * pi
l = ( t/c ) ** 2 
L = g * l
print(L)

-- EXECUTION TIME:
0.134007
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1621/2930/main.py", line 3, in <module>
    t = float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:11:25) 
-- CODE:
from math import*
g = float(input("valor de g: "))
t = float(input("tempo (seg): "))
c = 2 * pi
l = ( t/c ) ** 2 
L = g * l
print(L)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    t = float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:11:56) 
-- CODE:
from math import*
g = float(input("valor de g: "))
t = float(input("tempo (seg): "))
c = 2 * pi
l = ( t/c ) ** 2 
L = g * l
print(L)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    t = float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 18:11:58) 
-- CODE:
from math import*
g = float(input("valor de g: "))
t = float(input("tempo (seg): "))
c = 2 * pi
l = ( t/c ) ** 2 
L = g * l
print(L)

-- EXECUTION TIME:
0.172788
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1621/2930/main.py", line 3, in <module>
    t = float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 18:12:00) 
-- CODE:
from math import*
g = float(input("valor de g: "))
t = float(input("tempo (seg): "))
c = 2 * pi
l = ( t/c ) ** 2 
L = g * l
print(L)

-- EXECUTION TIME:
0.133598
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1621/2930/main.py", line 3, in <module>
    t = float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 18:12:02) 
-- CODE:
from math import*
g = float(input("valor de g: "))
t = float(input("tempo (seg): "))
c = 2 * pi
l = ( t/c ) ** 2 
L = g * l
print(L)

-- EXECUTION TIME:
0.165936
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1621/2930/main.py", line 3, in <module>
    t = float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:13:07) 
-- CODE:
from math import*
g = float(input("valor de g: "))
t = float(input("tempo (seg): "))
c = g * ((t/2pi)**2)
print(c)

-- ERROR:
File "XXXX", line 4
    c = g * ((t/2pi)**2)
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:13:32) 
-- CODE:
from math import*
g = float(input("valor de g: "))
t = float(input("tempo (seg): "))
c = (g * ((t/2pi)**2)
print(c)

-- ERROR:
File "XXXX", line 4
    c = (g * ((t/2pi)**2)
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:13:48) 
-- CODE:
from math import*
g = float(input("valor de g: "))
t = float(input("tempo (seg): "))
c = (g * (t/2pi)**2)
print(c)

-- ERROR:
File "XXXX", line 4
    c = (g * (t/2pi)**2)
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:14:04) 
-- CODE:
from math import*
g = float(input("valor de g: "))
t = float(input("tempo (seg): "))
c = g * (t/2pi)**2
print(c)

-- ERROR:
File "XXXX", line 4
    c = g * (t/2pi)**2
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:14:05) 
-- CODE:
from math import*
g = float(input("valor de g: "))
t = float(input("tempo (seg): "))
c = g * (t/2pi)**2
print(c)

-- ERROR:
File "XXXX", line 4
    c = g * (t/2pi)**2
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:14:09) 
-- CODE:
from math import*
g = float(input("valor de g: "))
t = float(input("tempo (seg): "))
c = g * (t/2pi)**2
print(c)

-- ERROR:
File "XXXX", line 4
    c = g * (t/2pi)**2
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:14:10) 
-- CODE:
from math import*
g = float(input("valor de g: "))
t = float(input("tempo (seg): "))
c = g * (t/2pi)**2
print(c)

-- ERROR:
File "XXXX", line 4
    c = g * (t/2pi)**2
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:14:10) 
-- CODE:
from math import*
g = float(input("valor de g: "))
t = float(input("tempo (seg): "))
c = g * (t/2pi)**2
print(c)

-- ERROR:
File "XXXX", line 4
    c = g * (t/2pi)**2
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:14:10) 
-- CODE:
from math import*
g = float(input("valor de g: "))
t = float(input("tempo (seg): "))
c = g * (t/2pi)**2
print(c)

-- ERROR:
File "XXXX", line 4
    c = g * (t/2pi)**2
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:14:35) 
-- CODE:
from math import*
g = float(input("valor de g: "))
t = float(input("tempo (seg): "))
c = g * ( t / 2 * pi)**2
print(c)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    t = float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:16:30) 
-- CODE:
from math import*
g = float(input("valor de g: "))
t = float(input("tempo (seg): "))
c = 2 * pi
l = ( t/c )  ** 2 
L = g * l
print = (L)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    t = float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:17:07) 
-- CODE:
from math import*
g = float(input("valor de g: "))
t = float(input("tempo (seg): "))
c = 2 * pi
l = ( t/c )  ** 2 
L = g * l
print(L)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    t = float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 18:17:31) 
-- CODE:
from math import*
g = float(input("valor de g: "))
t = float(input("tempo (seg): "))
c = 2 * pi
l = ( t/c )  ** 2 
L = g * l
print(L)

-- EXECUTION TIME:
0.173124
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1621/2930/main.py", line 3, in <module>
    t = float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:17:44) 
-- CODE:
from math import*
g = float(input("valor de g: "))
t = float(input("tempo (seg): "))
c = 2 * pi
l = ( t/c )  ** 2 
L = g * l
print(float(L)
-- ERROR:
File "XXXX", line 8
    
                  ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:18:08) 
-- CODE:
from math import*
g = float(input("valor de g: "))
t = float(input("tempo (seg): "))
c = 2 * pi
l = ( t/c )  ** 2 
L = g * l
print(L)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    t = float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:18:42) 
-- CODE:
from math import*
g = input("valor de g: ")
t = float(input("tempo (seg): "))
c = 2 * pi
l = ( t/c )  ** 2 
L = g * l
print(L)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    t = float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:19:18) 
-- CODE:
from math import*
g = input("valor de g: ")
t = input("tempo (seg): ")
c = 2 * pi
l = ( t/c )  ** 2 
L = g * l
print(L)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    t = input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:20:10) 
-- CODE:
from math import*
g = float(input("valor de g: ")
t = float(input("tempo (seg): ")
c = 2 * pi
l = ( t/c )  ** 2 
L = g * l
print(L)
-- ERROR:
File "XXXX", line 3
    t = float(input()
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:20:18) 
-- CODE:
from math import*
g = float(input("valor de g: ")
t = float(input("tempo (seg): ")
c = 2 * pi
l = ( t/c )  ** 2 
L = g * l
print(L)
-- ERROR:
File "XXXX", line 3
    t = float(input()
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:21:45) 
-- CODE:
from math import*
g = float(input("valor de g: ")
t = float(input("tempo (seg): ")
c = 2 * pi
l = ( t/c )  ** 2 
L = g * l
print(L)
-- ERROR:
File "XXXX", line 3
    t = float(input()
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:21:54) 
-- CODE:
from math import*
g = float(input("valor de g: "))
t = float(input("tempo (seg): "))
c = 2 * pi
l = ( t/c )  ** 2 
L = g * l
print(L)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    t = float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:22:14) 
-- CODE:
from math import*
g = float(input("valor de g: "))
t = float(input("tempo (seg): "))
c = 2 * pi
l = ( t/c )  ** 2 
L = g * l
print(L)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    t = float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 18:22:27) 
-- CODE:
from math import*
g = float(input("valor de g: "))
t = float(input("tempo (seg): "))
c = 2 * pi
l = ( t/c )  ** 2 
L = g * l
print(L)
-- EXECUTION TIME:
0.180454
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1621/2930/main.py", line 3, in <module>
    t = float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:22:57) 
-- CODE:
from math import*
g = float(input("valor de g: "))
t = float(input("tempo (seg): "))
c = 2 * pi
l = ( t/c )  * (t * c) 
L = g * l
print(L)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    t = float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:23:05) 
-- CODE:
from math import*
g = float(input("valor de g: "))
t = float(input("tempo (seg): "))
c = 2 * pi
l = ( t/c )  * (t / c) 
L = g * l
print(L)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    t = float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 18:23:16) 
-- CODE:
from math import*
g = float(input("valor de g: "))
t = float(input("tempo (seg): "))
c = 2 * pi
l = ( t/c )  * (t / c) 
L = g * l
print(L)
-- EXECUTION TIME:
0.135334
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1621/2930/main.py", line 3, in <module>
    t = float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:29:26) 
-- CODE:
from math import*
g = float(input("valor de g: "))
t = float(input("tempo (seg): "))
c = 2 * pi
l = ( t/c )  ** 2 
L = g * l
print(L)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    t = float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 18:29:49) 
-- CODE:
from math import*
g = float(input("valor de g: "))
t = float(input("tempo (seg): "))
c = 2 * pi
l = ( t/c )  ** 2 
L = g * l
print(L)
-- EXECUTION TIME:
0.171947
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1621/2930/main.py", line 3, in <module>
    t = float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:30:08) 
-- CODE:
from math import*
g = float(input("valor de g: "))
t = float(input("tempo (seg): "))
c = 2 * pi
l = ( t/c )  ** 2 
L = g * l
print(L)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    t = float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 18:30:18) 
-- CODE:
from math import*
g = float(input("valor de g: "))
t = float(input("tempo (seg): "))
c = 2 * pi
l = ( t/c )  ** 2 
L = g * l
print(L)
-- EXECUTION TIME:
0.119469
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1621/2930/main.py", line 3, in <module>
    t = float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:33:32) 
-- CODE:
from math import*
t = float(input("tempo (seg): "))
g = 9.81
c = 2 * pi
l = ( t/c )  ** 2 
L = g * l
print(L)
-- OUTPUT:
99.39608115313338
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 18:33:43) 
-- CODE:
from math import*
t = float(input("tempo (seg): "))
g = 9.81
c = 2 * pi
l = ( t/c )  ** 2 
L = g * l
print(L)
-- EXECUTION TIME:
0.245054
-- TEST CASE 1:
---- input:
20.0
---- correct output:
99.39608115313338
---- user output:
99.39608115313338
-- TEST CASE 2:
---- input:
168.5
---- correct output:
7055.195962800127
---- user output:
7055.195962800127
-- TEST CASE 3:
---- input:
324.2
---- correct output:
26117.72180773005
---- user output:
26117.72180773005
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
